--- a/index.html
+++ b/index.html
@@ -438,327 +438,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body class="book toc2 toc-right">
+<body class="book">
 <div id="header">
 <h1>Actividad 9. Pruebas de aceptación con Selenium</h1>
-<div id="toc" class="toc2">
-<div id="toctitle">Tabla de contenidos</div>
-<ul class="sectlevel1">
-<li><a href="#_introducción_a_selenium">1. Introducción a Selenium</a></li>
-<li><a href="#_selenium_ide">2. Selenium IDE</a></li>
-<li><a href="#_pasos_a_realizar">3. Pasos a realizar</a>
-<ul class="sectlevel2">
-<li><a href="#_parte_1_selenium_ide">3.1. Parte 1: Selenium IDE</a></li>
-<li><a href="#_parte_2_selenium_webdriver_y_jenkins">3.2. Parte 2: Selenium WebDriver y Jenkins</a></li>
-</ul>
-</li>
-<li><a href="#_faq_y_resolución_de_problemas_thoubleshouting">4. FAQ y resolución de problemas (<em>thoubleshouting</em>)</a></li>
-</ul>
-</div>
 </div>
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Herramientas y Métodos en Ingeniería del Software
-Version 1.0, Mayo-2020.
-Joaquín Cañadas &lt;<a href="mailto:jjcanada@ual.es">jjcanada@ual.es</a>&gt;</p>
-</div>
-<div class="quoteblock abstract">
-<blockquote>
-Tests de aceptación con Selenium.
-</blockquote>
-</div>
-<div class="paragraph">
-<div class="title">Objetivos</div>
-<p>*
-*
-*
-*</p>
-</div>
-<div class="sidebarblock">
-<div class="content">
-<div class="title">Realización y entrega</div>
-<div class="paragraph">
-<p>La realización de estas actividades se realizará en equipo. La entrega será mediante el envío de un informe y el acceso al profesor a los servicios configurados, para la revisión y evaluación de los mismos.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_introducción_a_selenium">1. Introducción a Selenium</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p><a href="https://www.selenium.dev/">Selenium</a> es un conjunto de herramientas para llevar a cabo pruebas automatizadas de aplicaciones web.</p>
-</div>
-<div class="paragraph">
-<p>Selenium consta de varias herramientas.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://www.selenium.dev/selenium-ide/"><strong>Selenium IDE</strong></a> es una extensión para <a href="https://addons.mozilla.org/es/firefox/addon/selenium-ide/">Firefox</a> y para <a href="https://chrome.google.com/webstore/detail/selenium-ide/mooikfkahbdckldjjndioackbalphokd">Chrome</a> que registra nuestra actividad en el navegador durante un período determinado; esta actividad se traduce en una serie de comandos que podremos repetir cuantas veces queramos. Cuando sea conveniente, incluiremos <strong>aserciones</strong> para realizar comprobaciones de que lo que se muestra en la web es realmente lo esperado. Con Selenium IDE podemos <em>grabar</em> casos de prueba o <em>test cases</em>, y agruparlos en juegos de prueba o <em>test suites</em>. <strong>Selenium IDE</strong> permite exportar los <em>test cases</em> en forma de scripts en muy diversos lenguajes, como Python, Ruby, Java (JUnit), C#, NodeJS (JavaScrip), y algunos más, para ser usados en los entornos de prueba habituales usando el siguiente componente de Selenium, llamado <strong>Selenium WebDriver</strong>.</p>
-</li>
-<li>
-<p><a href="https://www.selenium.dev/documentation/en/getting_started_with_webdriver/"><strong>Selenium WebDriver</strong></a>, implementa una API cliente lista para ser usada con tu entorno de testing favorito, que se ejecutará sobre un servidor que gestiona los principales navegadores que tengas instalados para realizar en ellos las pruebas. Es decir, podrás ejecutar las pruebas automáticamente desde tu IDE favorito, por ejemplo Eclipse, en todos los navegadores relevantes, de forma que no se te escape ningún detalle de tu aplicación. Para ello, necesitarás descargar del <em>driver</em> del navegador sobre el que quieres ejecutar las pruebas (además de, por supuesto, tener instalado dicho navegador en tu sistema).</p>
-</li>
-<li>
-<p>Un tercer componentes es <a href="https://www.selenium.dev/documentation/en/grid/"><strong>Selenium Grid</strong></a>, que permite ejecutar varias instancias del WebDriver de forma paralela, en distintas máquinas con distintas plataformas o sistemas operativos, gestionándolas centralizadamente, lo que acelerará drásticamente los tiempos de prueba.</p>
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_selenium_ide">2. Selenium IDE</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>Instala en tu equipo Selenium IDE en <a href="https://addons.mozilla.org/es/firefox/addon/selenium-ide/">Firefox</a> o <a href="https://chrome.google.com/webstore/detail/selenium-ide/mooikfkahbdckldjjndioackbalphokd">Chrome</a>. Tras ello, aparecerá el icono en tu navegador.</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-icon.png" alt="selenium ide icon">
-</div>
-<div class="title">Fig. 1. Icono de Selenium IDE en el navegador</div>
-</div>
-<div class="paragraph">
-<p>Al hacer clic sobre el icono, se abrirá Selenium IDE. Empieza por crear un nuevo proyecto:</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-open-1.png" alt="selenium ide open 1">
-</div>
-<div class="title">Fig. 2. Selenium IDE inicio</div>
-</div>
-<div class="paragraph">
-<p>Escribe un nombre al nuevo proyecto de pruebas:</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-open-new-project.png" alt="selenium ide open new project">
-</div>
-<div class="title">Fig. 3. Selenium IDE inicio</div>
-</div>
-<div class="paragraph">
-<p>Introduce la URL base a probar:</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-open-url-base.png" alt="selenium ide open url base">
-</div>
-<div class="title">Fig. 4. Selenium IDE URL base</div>
-</div>
-<div class="paragraph">
-<p>Directamente empieza a grabar las acciones que vayas realizando sobre el navegador:</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-start-recording.png" alt="selenium ide start recording">
-</div>
-<div class="title">Fig. 5. Selenium IDE grabando</div>
-</div>
-<div class="paragraph">
-<p>Durante tu interacción con la web que estés probando <strong>SIEMPRE es necesario ir añadiendo <em>asserts</em></strong> o verificaciones para comprobar que lo que muestra la aplicación corresponde con lo esperado.</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-assert-text.png" alt="selenium ide assert text">
-</div>
-<div class="title">Fig. 6. Selenium IDE assert text</div>
-</div>
-<div class="paragraph">
-<p>En la ventana de Selenium IDE, puedes ver que se van grabando en los comandos de Selenium los pasos realizados sobre el navegador (clics, entradas de texto, asserts, etc).</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-saved-steps.png" alt="selenium ide saved steps">
-</div>
-<div class="title">Fig. 7. Selenium IDE pasos guardados</div>
-</div>
-<div class="paragraph">
-<p>Finaliza la grabación del test en el botón de detener, y dale un nombre al test case creado:</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-stop-test-name.png" alt="selenium ide stop test name">
-</div>
-<div class="title">Fig. 8. Selenium IDE guardar test case</div>
-</div>
-<div class="paragraph">
-<p>A continuación, dale al <em>play</em> para volver a ejecutar el test:</p>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/selenium-ide-play-test.png" alt="selenium ide play test">
-</div>
-<div class="title">Fig. 9. Selenium IDE detener grabación</div>
-</div>
-<div class="paragraph">
-<p>Siguiendo estos sencillos pasos, puedes grabar tantos casos de prueba como sean necesarios para ejercitar tu aplicación web y verificar que todos escenarios de los casos de uso funcionan correctamente.</p>
-</div>
-<div class="paragraph">
-<p>Recuerda que es necesario crear casos de prueba para:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Los <strong>escenarios correctos</strong>, en los que la aplicación realiza el caso de uso correctamente, tal y como se espera.</p>
-</li>
-<li>
-<p>Los <strong>escenarios de error o incorrectos</strong>, donde el funcionamiento del caso de uso no es el caso correcto, bien porque los datos introducidos no son adecuados, o faltan, o por cualquier otro motivo. La aplicación en ese caso debería mostrar un mensaje de error de algún tipo y comportarse de manera estable, es decir, que se queda en un estado aceptable y <em>"no peta"</em> en esos escenarios incorrectos.</p>
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_pasos_a_realizar">3. Pasos a realizar</h2>
-<div class="sectionbody">
-<div class="sect2">
-<h3 id="_parte_1_selenium_ide">3.1. Parte 1: Selenium IDE</h3>
-<div class="sect3">
-<h4 id="_aplicación_web_login_y_registro_de_usuarios">3.1.1. Aplicación web login y registro de usuarios</h4>
-<div class="paragraph">
-<p>Os dejo aquí tres ejemplos de plantillas de aplicación web que implementan un login y registro de usuarios.</p>
-</div>
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Elegid una de las plantillas. Si deseáis usar alguna otra plantilla en otra tecnología, comentádmelo antes por si implementa la funcionalidad básica requerida.</p>
-</li>
-<li>
-<p>En local, crear el proyecto basado en la plantilla. Probar que funciona.</p>
-</li>
-</ol>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_creación_de_test_selenium">3.1.2. Creación de test Selenium</h4>
-<div class="paragraph">
-<p>Crear en Selenium los test cases necesarios para probar, tanto escenarios correctos como escenarios de error, de las siguientes funcionalidades:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Registro de usuario (Caso correcto)</p>
-</li>
-<li>
-<p>Registro de usuario (Casos incorrectos)</p>
-</li>
-<li>
-<p>Login de usuario (Caso correcto)</p>
-</li>
-<li>
-<p>Login de usuario (Casos incorrectos)</p>
-</li>
-<li>
-<p>Editar el perfil de usuario logueado (caso correcto)</p>
-</li>
-<li>
-<p>Editar el perfil de usuario logueado (casos incorrectos)</p>
-</li>
-<li>
-<p>Cambio de contraseña de usuario logueado (Caso correcto)</p>
-</li>
-<li>
-<p>Cambio de contraseña de usuario logueado (Casos incorrectos)</p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p>Guardar los test cases en una test suite (formato .side).</p>
-</div>
-<div class="paragraph">
-<p>Puesto que para realizar una prueba exhaustiva, cubriendo todos los posibles escenarios, el número de casos de prueba es elevado, la forma de trabajar es repartir las funcionalidades entre los miembros del equipo y así repartir el trabajo: Una persona que haya los tests de Registro de usuario + Editar perfil, y otra los de login de usuario + cambio de contraseña. Para equipos de 3 personas, una el registro, otra el login y otra la edición de perfil y cambio de contraseña.</p>
-</div>
-<div class="sidebarblock">
-<div class="content">
-<div class="title">Truco para el test Registro de usuario (Caso correcto)</div>
-<div class="paragraph">
-<p>Para que el test de registro de usuario lo podamos ejecutar repetidamente sin que nos de el error de "usuario ya existe", tenemos que usar un email aleatorio en cada ejecución del test. Eso se consigue definiendo una variable en Selenium, llamado al comando <code>execute script</code>, escribiendo la función de JavaScript que genere ese email aleatorio, y guardándolo en una variable que luego usaremos en en paso que escribe el valor en el campo <em>email</em> del registro.</p>
-</div>
-<div class="paragraph">
-<p>El paso sería del test case de Selenium IDE es:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Command: <strong>execute script</strong></p>
-</li>
-<li>
-<p>Target: <code>return "ual-" + Math.floor(Math.random()*1500000)+"@ual.es"`</code></p>
-</li>
-<li>
-<p>Value: <code>emailramdon</code></p>
-</li>
-</ul>
-</div>
-<div class="imageblock text-center thumb">
-<div class="content">
-<img src="images/register-email-ramdon.png" alt="register email ramdon">
-</div>
-<div class="title">Fig. 10. Generación de un email aleatorio</div>
-</div>
-</div>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_desplegar_la_aplicación_en_azure">3.1.3. Desplegar la aplicación en Azure</h4>
-<div class="paragraph">
-<p>La aplicación que hemos probado localmente, debemos ponerla "en producción", es decir, desplegarla en Azure para que esté disponible por nuestros usuarios (ficticios).</p>
-</div>
-<div class="paragraph">
-<p>Dependiendo de la plantilla elegida, el despliegue será distinto. La plantilla de .Net explica el despliegue en Azure Web app. El resto se pueden desplegar en Web app, o bien en una máquina virtual.</p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_adaptar_los_test_a_la_url_de_despliegue">3.1.4. Adaptar los test a la URL de despliegue</h4>
-<div class="paragraph">
-<p>Los test que hemos creado en el <em>*entorno de desarrollo*</em>, es decir, en nuestro equipo local, deben adaptarse para que funcionen en <em>*entorno de producción*</em> es decir, deben atacar a la aplicación desplegada.</p>
-</div>
-<div class="paragraph">
-<p>Para ello simplemente tendrás que cambiar la URL base.</p>
-</div>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_parte_2_selenium_webdriver_y_jenkins">3.2. Parte 2: Selenium WebDriver y Jenkins</h3>
-<div class="sect3">
-<h4 id="_exportar_a_junit">3.2.1. Exportar a JUnit</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_ejecutar_en_eclipse_con_firefox_y_chrome">3.2.2. Ejecutar en Eclipse con Firefox y Chrome</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_configurar_un_driver_headless">3.2.3. Configurar un driver <em>headless</em></h4>
-
-</div>
-<div class="sect3">
-<h4 id="_ejecución_en_jenkins">3.2.4. Ejecución en Jenkins</h4>
-
-</div>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_faq_y_resolución_de_problemas_thoubleshouting">4. FAQ y resolución de problemas (<em>thoubleshouting</em>)</h2>
-<div class="sectionbody">
-<div class="ulist">
-<ul>
-<li>
-<p>Mas información sobre <a href="https://www.selenium.dev/maven">Maven con Selenium</a>.</p>
-</li>
-</ul>
+<p><a href="sesion09selenium.html">Guión de la actividad</a></p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-05-17 17:55:02 +0200
+Last updated 2020-05-18 09:53:12 +0200
 </div>
 </div>
 </body>
