en desarrollo parte 2

--- a/sesion09selenium.html
+++ b/sesion09selenium.html
@@ -724,6 +724,13 @@ Tests de aceptación con Selenium.
 </div>
 <div class="sect2">
 <h3 id="_parte_2_selenium_webdriver_y_jenkins">3.2. Parte 2: Selenium WebDriver y Jenkins</h3>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>En desarrollo de aquí en adelante&#8230;&#8203;</p>
+</div>
+</div>
+</div>
 <div class="sect3">
 <h4 id="_exportar_a_junit">3.2.1. Exportar a JUnit</h4>
 
@@ -758,7 +765,7 @@ Tests de aceptación con Selenium.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-05-17 17:55:02 +0200
+Last updated 2020-05-18 09:56:31 +0200
 </div>
 </div>
 </body>
