hasta cross-browsing en eclipse

--- a/sesion09selenium.html
+++ b/sesion09selenium.html
@@ -896,12 +896,18 @@ Tests de aceptación con Selenium.
 </div>
 </div>
 <div class="paragraph">
-<p>Verás que su</p>
+<p>Verás que se abre Chrome y se ejecuta el mismo test.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_configurar_un_driver_headless">3.2.3. Configurar un driver <em>headless</em></h4>
-
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>En desarrollo de aquí en adelante&#8230;&#8203; Gracias por vuestra paciencia.</p>
+</div>
+</div>
+</div>
 </div>
 <div class="sect3">
 <h4 id="_ejecución_en_jenkins">3.2.4. Ejecución en Jenkins</h4>
@@ -925,7 +931,7 @@ Tests de aceptación con Selenium.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-05-20 13:00:00 +0200
+Last updated 2020-05-20 15:22:53 +0200
 </div>
 </div>
 <style>
